--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "got": "^13.0.0",
     "next": "^13.5.1",
     "react": "^18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.5.3",
+    "react-responsive": "^9.0.2"
   },
   "devDependencies": {
     "@types/node": "20.4.0",
